# bank_record_converter

./: Cargo.toml  README.md
examples/ypbank_compare/: Cargo.toml  README.md
examples/ypbank_compare/src/: main.rs
examples/ypbank_converter/: Cargo.toml  README.md
examples/ypbank_converter/src/: main.rs
src/: convertor.rs  error.rs  lib.rs
src/convertor/: bin_format.rs  csv_format.rs  txt_format.rs
tests/: test_conver.rs  test_enum.rs
