[package]
name = "bank_record_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.17"
enum-display = { version = "0.2", default-features = false }
csv = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
